--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidPlayground">
-        <activity android:name=".viewmodel_example.ViewModelActivity"></activity>
+        <activity android:name=".bitmapcombine.BitmapCombineActivity"></activity>
+        <activity android:name=".viewmodel_example.ViewModelActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
